[BE,TEST,DOC,Telegram BOT] API Post Save Outfit History
